# UDP-client

./: CMakeLists.txt  README.md
include/: MoldUDPReceiver.hpp  MoldUDPReceiverDPDK.hpp  UDPSocket.hpp
src/: MoldUDPReceiver.cpp  MoldUDPReceiverDPDK.cpp  UDPSocket.cpp  main.cpp  main_dpdk.cpp  multicast_client.cpp  simple_client.cpp
